# tads-runner

./: CMakeLists.txt  TadsConfig.cmake.in  TadsFunctions.cmake
curl/: CMakeLists.txt
curl/lib/: CMakeLists.txt
tads2/: CMakeLists.txt  dbgtr.c  h_le_c11.h  osifc.h  osnoui.c
tads2/msdos/: osdos.c  oswin.c
tads2/unix/: osunixh.c  osunixt.c  osunixt.h
tads3/: CMakeLists.txt  mkchrtab.cpp  os_stdio.cpp  std.cpp  t3std.h  vmanonfn.h  vmbignum.h  vmbytarr.h  vmcoll.h  vmcset.h  vmdate.h  vmdict.h  vmdynfunc.h  vmfilnam.h  vmfilobj.h  vmfref.h  vmgram.h  vmhttpreq.h  vmhttpsrv.h  vmintcls.h  vmiter.h  vmlookup.h  vmlst.h  vmmaincl.cpp  vmnet.h  vmobj.cpp  vmobj.h  vmpat.h  vmstr.h  vmstrbuf.h  vmstrcmp.h  vmtmpfil.h  vmtobj.h  vmtzobj.h  vmvec.h
tads3/emscripten/: emscripten.cpp  logic.js  osemscripten.cpp  osnetemscipten.cpp  t3run.html  t3run_ems.html
tads3/unix/: osnetunix.cpp  osnetunix.h  osunix.c
tads3/win32/: osnetcli.cpp
tests/: CMakeLists.txt
